src/assets/css/styles.css
/* ... */
 #projects .img[data-project="jQueryModal"] {
  background-image: url("../imgs/projet_widget_modal_jquery.png");
  background-repeat: no-repeat;
  background-position-x: 50%;
  background-position-y: 30%;
  background-size: 180%;
 }

#projects .title {
  margin: -21px 0 0 -10px;
  -webkit-clip-path: polygon(0 0, 100% 0%, calc(100% - 7px) calc(100% + 5px), 0% 160%);
  clip-path: polygon(0 0, 100% 0%, calc(100% - 7px) calc(100% + 5px), 0% 160%);
  z-index: 2;
}
@media screen and (max-height: 600px) {
    #projects .title {
      margin: -15px 0 0 -10px;
    }
}
#projects .projectCard ul li { margin: 0 0 0 12px; }
#projects .details {
  overflow-y: auto;
  margin: 1vmax 2vmax 3vmax 2vmax;
  flex-grow: 1;
  z-index: 1;

  /* TEST */ position: relative;
}
:root {
  --padding-x: 20%;
}
#projects a.projectLink {
  border-radius: 50px;
  background-color: rgb(118, 133, 219);
  background: linear-gradient(270deg, rgb(118, 133, 219) 0%, #7c65c1 100%);
  color: #fff;
  padding: 7px var(--padding-x);
  cursor: pointer;
  transition: all 0.4s ease;
  overflow: hidden;
  display: inline-block;
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate(-50%, 50%);
  text-decoration: none;
  font-size: max(12px, 2.5vmin);
  border-bottom: solid 1px rgb(100, 82, 138);
}
@media screen and (min-width: 481px) and (max-width: 768px) {
  #projects a.projectLink {  
    /* font-size: clamp(16px, 3vmin, 18px); */ /* Version non IOS compatible */
    font-size: max(16px, min(3vmin, 18px)); /* Version IOS compatible */
  }
}
@media screen and (max-width: 480px) {
  #projects a.projectLink { 
    /* font-size: clamp(16px, 4vmin, 18px); */ /* Version non IOS compatible */
    font-size: max(16px, min(4vmin, 18px)); /* Version IOS compatible */
  }
}
@media screen and (max-height: 600px) {
  #projects a.projectLink {
    padding: 5px var(--padding-x);
  }
}

#projects .projectCard,
#projects a.projectLink {
  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
}
@media screen and (max-width: 480px) {
  #projects .projectCard,
  #projects a.projectLink {
    box-shadow: 0 10px 25px rgb(0 0 0 / 50%);
  }
}
  
#projects a.projectLink:before {
  content: "";
  background: rgba(255,255,255,0.3);
  position: absolute;
  height: 300%;
  width: 30%;
  top: -100%;
  left: -40%;
  transform: rotate(27deg);
  transition: left 0.4s ease;
}
#projects a.projectLink:hover:before {
  left: 110%;
}
#projects a.projectLink:hover {
  background-color: rgb(79, 66, 109);
}
#projects a.projectLink:hover + .img {
  background-size: 290%;
}
/*#endregion - Rubrique "Projets perso" */


#progressBar {
  position: fixed;
  z-index: 1000;
  bottom: 0;
  height: 10px;
  width: 0vw;
  overflow: hidden;
  border-top: solid 1px #a6a6a6;
}
#progressBar > div {
  height: 10px;
  background: linear-gradient(to right, #fe6652 0%, #fe529a 20%, rgb(0, 118, 166,1) 40%, #5A5E9A 60%, #676CC6 80%, #A867C6 100%);
  width: 100vw;
}


/*#region -transform sur les éléments SVG */
#SVG_chaise,
#SVG_tableSansPiedBG,
#SVG_tablePiedBG,
#SVG_corps,
#SVG_bras,
#SVG_laptop,
#SVG_lampe,
#SVG_tasse,
#SVG_ombre {
  display: none;
}

#SVG_corps,
#SVG_bras,
#SVG_ombre,
#SVG_lampe,
#SVG_tasse,
#SVG_laptop {
  opacity: 0;
}
#SVG_chaise {
  transform: translateX(-300vw);
}
#SVG_chaise .roue {
  stroke: #000000;
  stroke-width: 0.8;
  stroke-miterlimit: 4;
}
#SVG_tableSansPiedBG, 
#SVG_tablePiedBG {
  transform: translateX(300vw);
}
#SVG_laptop,
#SVG_lampe,
#SVG_tasse {
  transform: translateY(-200vh);
}
/*#endregion -transform sur les éléments SVG */



/*#region - Dernier écran avant celui de fin: Texte à droite */
.msgRemerciements {
  z-index: 4;
  opacity: 0;
  width: 0;
  align-self: flex-start; /* Pour être aligné en haut de spn conteneur flex */
  /* font-size: clamp(23px, 4.5vmax, 55px); */  /* Version non IOS compatible */
  font-size: max(23px, min(4.5vmax, 55px)); /* Version IOS compatible */
  line-height: 4.2vmax;
  text-align: right;
  display: none;
  flex-direction: column;
}

.msgRemerciements > span {
  background: #676CC6;
  background: -webkit-linear-gradient(to right, #676CC6 0%, #B754E9 100%);
  background: -moz-linear-gradient(to right, #676CC6 0%, #B754E9 100%);
  background: linear-gradient(to right, #676CC6 0%, #B754E9 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  opacity: 0;
  transform: translateY(5vh);
}

.msgRemerciements a {
  cursor: pointer;
  width: 80%;
  border-radius: 25px;
  margin-top: 3.8vh;
  margin-right: 0px;
  margin-bottom: 0px;
  margin-left: auto;
  /* font-size: clamp(16px, 1.8vmax, 21px); */  /* Version non IOS compatible */
  font-size: max(16px, min(1.8vmax, 21px)); /* Version IOS compatible */
  background: none;
  opacity: 0;
  transform: translateY(5vh);
  background: linear-gradient(129deg, #fe6652 0%, #fe529a 100%);
  color: #fff;
  line-height: 5.2vh;
  min-height: 32px !important;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  overflow: hidden;
  box-shadow: 0 0 0 #ffa09c;
}
.msgRemerciements a:before {
  content: "";
  background: rgba(255,255,255,0.3);
  position: absolute;
  height: 500%;
  width: 30%;
  left: -40%;
  transform: rotate(27deg);
  transition: left 0.4s ease;
}
.msgRemerciements a:hover:before {
  left: 110%;
}

.msgRemerciements a > i { opacity: 0.6; }
.msgRemerciements a,
.msgRemerciements a > i {
  transition: all 0.2s ease-out;
}
.msgRemerciements #btCV > i { margin: 0 -12px 0 12px; }
.msgRemerciements #btGithub > i { margin: 0 -10px 0 10px; }
.msgRemerciements a > span {
  flex-grow: 1;
  text-align: center;
  letter-spacing: 0.15vw;
  font-weight: 800;
}
/* Media query qui permet de filtrer les devices qui peuvent survoler les éléments simplement: Ici les ordimais pas les mobiles et tablettes */
@media (hover: hover) {
  .msgRemerciements a:hover {
    box-shadow: 0 4px 0 #ffa09c;
    transform: translateY(-4px) !important;
  }
  .msgRemerciements a:hover > i { opacity: 1; }
}
/* ... */

